<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offer"
            android:title="@string/menu_offers" />

        <item
            android:id="@+id/nav_beauticians"
            android:icon="@drawable/ic_beauticians"
            android:title="@string/menu_beauticians" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_appointment"
            android:title="@string/menu_appointments" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_Favorite" />
    </group>
    <group android:id="@+id/information">
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/menu_about_us"/>
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/menu_contact_us"/>
    </group>

</menu>

