<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="activity"
            type="com.example.thespa.view.verification.VerificationActivity" />
        <variable
            name="edit1"
            type="android.widget.EditText" />
        <variable
            name="edit2"
            type="android.widget.EditText" />
        <variable
            name="edit3"
            type="android.widget.EditText" />
        <variable
            name="edit4"
            type="android.widget.EditText" />
    </data>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.verification.VerificationActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/verification"
            android:textColor="@color/White"
            android:textSize="@dimen/dimen_32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/a_4_digit_pin_has_been_sent_to_your_email_address_enter_it_below_to_continue"
            android:textColor="@color/White" />

        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_one"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@color/White"
                android:inputType="number"
                android:maxLength="1"
                android:padding="8dp"
                android:singleLine="true"

                />

            <EditText
                android:id="@+id/editText_two"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_margin="10dp"
                android:background="@color/White"
                android:inputType="number"
                android:maxLength="1"
                android:padding="8dp"
                android:singleLine="true"

                />

            <EditText
                android:id="@+id/editText_three"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@color/White"
                android:inputType="number"
                android:maxLength="1"
                android:padding="8dp"

                android:singleLine="true" />

            <EditText
                android:id="@+id/editText_four"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_margin="10dp"
                android:background="@color/White"
                android:inputType="number"
                android:maxLength="1"
                android:padding="8dp"
                android:singleLine="true" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_style"
        android:text="@string/continue_word"
        android:textColor="@color/White"
        android:textSize="@dimen/dimen_text_17"
        android:translationZ="4dp"
        android:onClick="@{()->activity.goToPassword()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resend_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_button" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/skip"
        android:onClick="@{()->activity.goToPassword()}"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
</layout>